# audio-track-separator

./: .eslintignore  .eslintrc.cjs  .gitignore  DOCKER_SETUP.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  setup-docker.sh  vite.config.ts
py-backend/: .dockerignore  Dockerfile  main.py  requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: audio-player.tsx  file-upload.tsx  output-selector.tsx  progress-display.tsx  status-bar.tsx  stem-selector.tsx  theme-toggle.tsx
src/components/ui/: badge.tsx  button.tsx  progress.tsx  separator.tsx
