[package]
name = "spleeter-studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["Spleeter Studio Team"]
license = ""
repository = ""
default-run = "spleeter-studio"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "spleeter-studio"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [ "fs-read-dir", "dialog-confirm", "dialog-ask", "dialog-open", "fs-exists", "fs-rename-file", "dialog-message", "fs-remove-file", "fs-write-file", "fs-create-dir", "fs-remove-dir", "fs-read-file", "fs-copy-file", "dialog-save", "shell-open", "dialog", "protocol-asset"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[patch.crates-io]
glib = { path = "vendor/glib-0.15.12" }
